# watchmedo_android

./: .editorconfig  .gitignore  ANDROID_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android.yml
server-example/: README.md  package.json  server.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: device_info.rs  lib.rs  main.rs  sender.rs
